Make WebSocket available again in service workers

The patch https://codereview.chromium.org/2284473002/ was basically a
refactoring change, but it also included a change that it started using
the InterfaceProvider instance of the LocalFrame of the associated
Document if any. However, in a service worker, the LocalFrame returns
the empty provider obtained by calling
InterfaceProvider::getEmptyInterfaceProvider(). This is because the
WebEmbeddedWorkerImpl used for service workers doesn't override
the WebFrameClient::interfaceProvider() method which returns nullptr by
default while one on the WebSharedWorkerImpl and RenderFrameImpl
returns an effective InterfaceProvider instance.

This patch fixes the issue by changing the code to use the
InterfaceProvider of the LocalFrame only when it's not the empty
provider.

R=falken@chromium.org
TBR=yhirano@chromium.org
BUG=671588

Review-Url: https://codereview.chromium.org/2564493002
Cr-Commit-Position: refs/heads/master@{#437406}

Former-commit-id: dd3b58a1f0073215d58bcb8dc216b89e546bc9f7